force-app/main/default/objects/Brands__c/Brands__c.object-meta.xml
<CustomObject>
    <label>Brands</label>
    <nameField>
        <label>Brands  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Brands</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>