force-app/main/default/objects/Brands__c/fields/Assisted__c.field-meta.xml
<CustomField>
    <fullName>Assisted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assisted</label>
    <type>Checkbox</type>
</CustomField>